CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
INCLUDE(InstallRequiredSystemLibraries)
INCLUDE(CPack)
PROJECT(VERSIONHEADER C)
FIND_PACKAGE(Git)
FILE(WRITE ${CMAKE_BINARY_DIR}/main.c
"\#include \"version.h\"
\#include <stdio.h>
int main(void)
{
  printf(\"%s\\n\", VERSION);
  return 0;
}")
FILE(WRITE ${CMAKE_BINARY_DIR}/version.h.in
"\#define VERSION \"@VERSION@\"\n"
)
FILE(WRITE ${CMAKE_BINARY_DIR}/version.cmake
"EXECUTE_PROCESS(
     COMMAND ${GIT_EXECUTABLE} describe --tags --dirty
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
     OUTPUT_VARIABLE VERSION
     RESULT_VARIABLE GIT_DESCRIBE_RESULT
     ERROR_VARIABLE GIT_DESCRIBE_ERROR
     OUTPUT_STRIP_TRAILING_WHITESPACE
 )
MESSAGE(\"Result: \${GIT_DESCRIBE_RESULT}\")
IF(\${GIT_DESCRIBE_RESULT} EQUAL 0)
  FILE(WRITE ${CMAKE_SOURCE_DIR}/VERSION \"\${VERSION}\")
ELSE(\${GIT_DESCRIBE_RESULT} EQUAL 0)
  FILE(READ ${CMAKE_SOURCE_DIR}/VERSION VERSION)
ENDIF(\${GIT_DESCRIBE_RESULT} EQUAL 0)
CONFIGURE_FILE(\${SRC} \${DST} @ONLY)
")
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})
ADD_EXECUTABLE(main main.c)
ADD_CUSTOM_TARGET(
    version
    ${CMAKE_COMMAND} -D SRC=${CMAKE_BINARY_DIR}/version.h.in
                     -D DST=${CMAKE_BINARY_DIR}/version.h
                     -P ${CMAKE_BINARY_DIR}/version.cmake
)
ADD_DEPENDENCIES(main version)
