CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
INCLUDE(InstallRequiredSystemLibraries)
PROJECT(VERSIONHEADER C)
FIND_PACKAGE(Git)
FILE(WRITE ${CMAKE_BINARY_DIR}/main.c
"\#include \"version.h\"
\#include <stdio.h>
int main(void)
{
  printf(\"%s\\n\", VERSION);
  return 0;
}")
FILE(WRITE ${CMAKE_BINARY_DIR}/version.h.in
"\#define VERSION \"@VERSION@\"\n"
)
FILE(WRITE ${CMAKE_BINARY_DIR}/version.cmake
"EXECUTE_PROCESS(
     COMMAND ${GIT_EXECUTABLE} describe --tags --dirty
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
     OUTPUT_VARIABLE VERSION
     RESULT_VARIABLE GIT_DESCRIBE_RESULT
     ERROR_VARIABLE GIT_DESCRIBE_ERROR
     OUTPUT_STRIP_TRAILING_WHITESPACE
 )
MESSAGE(\"Result: \${GIT_DESCRIBE_RESULT}\")
IF(\${GIT_DESCRIBE_RESULT} EQUAL 0)
  FILE(WRITE ${CMAKE_SOURCE_DIR}/VERSION \"\${VERSION}\")
ELSE(\${GIT_DESCRIBE_RESULT} EQUAL 0)
  FILE(READ ${CMAKE_SOURCE_DIR}/VERSION VERSION)
ENDIF(\${GIT_DESCRIBE_RESULT} EQUAL 0)
CONFIGURE_FILE(\${SRC} \${DST} @ONLY)
")
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR})
ADD_EXECUTABLE(main main.c)
ADD_CUSTOM_TARGET(
    version
    ${CMAKE_COMMAND} -D SRC=${CMAKE_BINARY_DIR}/version.h.in
                     -D DST=${CMAKE_BINARY_DIR}/version.h
                     -P ${CMAKE_BINARY_DIR}/version.cmake
)
EXECUTE_PROCESS(
     COMMAND ${GIT_EXECUTABLE} describe --tags --dirty
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
     OUTPUT_VARIABLE VERSION
     RESULT_VARIABLE GIT_DESCRIBE_RESULT
     ERROR_VARIABLE GIT_DESCRIBE_ERROR
     OUTPUT_STRIP_TRAILING_WHITESPACE
 )
SET(CPACK_PACKAGE_VERSION "${VERSION}")
INCLUDE(CPack)

IF (UNIX)
  FILE(WRITE ${CMAKE_BINARY_DIR}/Dist.cmake
"MESSAGE(STATUS \"Package Dist running...\")
INCLUDE(CPackSourceConfig.cmake)
EXECUTE_PROCESS(COMMAND cpack -G TGZ --config CPackSourceConfig.cmake
  TIMEOUT 3600
  WORKING_DIRECTORY \${CMAKE_BINARY_DIR})
")
  #
  # Add custom target
  #
  ADD_CUSTOM_TARGET(dist
    COMMAND ${CMAKE_COMMAND} .
    COMMAND ${CMAKE_COMMAND} -P ${CMAKE_BINARY_DIR}/Dist.cmake
    )
ENDIF(UNIX)

ADD_DEPENDENCIES(main version)
ADD_DEPENDENCIES(dist version)
